--- a/web-gui/src/app/dialogs/goto-links-dialog/goto-links-dialog.component.html
+++ b/web-gui/src/app/dialogs/goto-links-dialog/goto-links-dialog.component.html
@@ -2,11 +2,13 @@
   <mat-form-field>
     <mat-label>Kurs Link</mat-label>
     <input matInput [value]="courseLink" readonly>
+    <button mat-icon-button matSuffix (click)="copy(courseLink)"><mat-icon>content_copy</mat-icon></button>
   </mat-form-field>
   <br>
   <mat-form-field>
     <mat-label>App Kurs Link</mat-label>
     <input matInput [value]="appLink" readonly>
+    <button mat-icon-button matSuffix (click)="copy(appLink)"><mat-icon>content_copy</mat-icon></button>
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions class="dialog-actions">
