Add description text to goto links dialog
Signed-off-by: Jonas-Ian Kuche <jonas-ian.kuche@mni.thm.de>

--- a/web-gui/src/app/dialogs/goto-links-dialog/goto-links-dialog.component.html
+++ b/web-gui/src/app/dialogs/goto-links-dialog/goto-links-dialog.component.html
@@ -1,8 +1,8 @@
 <mat-dialog-content>
-  <mat-form-field>
+  <p>Kopiere den Link, um ihn in Moodle oder anderen externen Seiten einzubinden. Er leitet Studierende zu der Kursseite bzw. der Feedback App weiter.</p>
+  <mat-form-field class="max-width">
     <mat-label>Kurs Link</mat-label>
-    <input matInput [value]="courseLink" readonly matTooltip="Ein Link, der auf externen Seiten wie z. B. Moodle
-                eingebunden werden kann und Studierenden, welche diesem folgen zur Kursseite weiterleitet">
+    <input matInput [value]="courseLink">
     <button mat-icon-button matSuffix
             (click)="copy(courseLink)"
             matTooltip="Kopiert den Kurs Link">
@@ -10,10 +10,9 @@
     </button>
   </mat-form-field>
   <br>
-  <mat-form-field>
+  <mat-form-field class="max-width">
     <mat-label>App Link</mat-label>
-    <input matInput [value]="appLink" readonly matTooltip="Ein Link, der auf externen Seiten wie z. B. Moodle
-              eingebunden werden kann und Studierenden, welche diesem folgen zur Feedback-App weiterleitet">
+    <input matInput [value]="appLink" readonly>
     <button mat-icon-button matSuffix
             (click)="copy(appLink)"
             matTooltip="Kopiert den App Link">
