--- a/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.html
+++ b/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.html
@@ -54,10 +54,10 @@
   <div class="spacer"></div>
 
   <div mat-dialog-actions class="actions">
-    <div class="toggle-box">
+    <!--<div class="toggle-box">
       <mat-slide-toggle [(ngModel)]="hidePoints" [color]="toggleColor" (change)="toggleChange()">Punkte für den gesamten Kurs verbergen</mat-slide-toggle>
-    </div>
+    </div>-->
     <button mat-flat-button color="warn" (click)="closeDialog()">Abbrechen</button>
-    <button mat-flat-button  color="accent" (click)="save()">Erstellen</button>
+    <button mat-flat-button  color="accent" (click)="save()">Speichern</button>
   </div>
 </div>
