--- a/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.html
+++ b/web-gui/src/app/dialogs/task-points-dialog/task-points-dialog.component.html
@@ -34,7 +34,7 @@
           </mat-list-item>
           <mat-list-item>
             <mat-form-field class="mat-input-element">
-              <input type="text" [(ngModel)]="element.bonusFormula" (keyup)="checkFormula(element.bonusFormula)" placeholder="Bonusformel (x: Richtige)" matInput>
+              <input type="text" [(ngModel)]="element.bonusFormula" (keyup)="checkFormula(element.bonusFormula)" placeholder="Bonusformel (x: Richtige) (y: Anzahl der Aufgaben zum bestehen)" matInput>
               <mat-hint [className]="bonusFormula.valid ? 'valid ' : 'invalid'">{{bonusFormula.message}}</mat-hint>
             </mat-form-field>
             <mat-icon class="bonus-formula-info" matTooltip="Verwende x für die Anzahl der richtigen Aufgaben in der Formel, z.B. 'abrunden(x/4)'">help</mat-icon>
