Add spreadsheet inputs
Signed-off-by: Jonas-Ian Kuche <jonas-ian.kuche@mni.thm.de>

--- a/web-gui/src/app/dialogs/spreadsheet-dialog/spreadsheet-dialog.component.html
+++ b/web-gui/src/app/dialogs/spreadsheet-dialog/spreadsheet-dialog.component.html
@@ -3,6 +3,6 @@
   <app-spreadsheet [spreadsheet]="data.spreadsheet" (select)="select($event)"></app-spreadsheet>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-flat-button color="accent" (click)="confirm(false)">Abbrechen</button> &nbsp; &nbsp;
-  <button mat-flat-button color="warn" (click)="confirm(true)">Auswählen</button>
+  <button mat-flat-button (click)="confirm(false)">Abbrechen</button> &nbsp; &nbsp;
+  <button mat-flat-button color="accent" (click)="confirm(true)">Auswählen</button>
 </mat-dialog-actions>
