Add rounding decimals configuration
Signed-off-by: Jonas-Ian Kuche <jonas-ian.kuche@mni.thm.de>

--- a/web-gui/src/app/dialogs/task-new-dialog/task-new-dialog.component.html
+++ b/web-gui/src/app/dialogs/task-new-dialog/task-new-dialog.component.html
@@ -57,6 +57,9 @@
           <input matInput type="text" placeholder="Ergebniss Felder" formControlName="outputFields" required>
           <mat-icon matSuffix (click)="getFromSpreadsheet('outputFields')">search</mat-icon>
         </mat-form-field>
+        <mat-form-field class="col">
+          <input matInput type="number" placeholder="Nachkommastellen" formControlName="decimals" required>
+        </mat-form-field>
       </div>
       <br>
     </form>
