--- a/web-gui/src/app/page-components/task-detail/submission-spreadsheet/submission-spreadsheet.component.html
+++ b/web-gui/src/app/page-components/task-detail/submission-spreadsheet/submission-spreadsheet.component.html
@@ -12,4 +12,6 @@
         </mat-form-field>
     </div>
   </form>
+  <small>Alle Eingaben werden auf {{decimals}} Nachkommastellen gerundet.</small>
 </div>
+
