Add prefilling with latest submission to spreadsheet form
Signed-off-by: Jonas-Ian Kuche <jonas-ian.kuche@mni.thm.de>

--- a/web-gui/src/app/page-components/task-detail/task-detail.component.html
+++ b/web-gui/src/app/page-components/task-detail/task-detail.component.html
@@ -34,9 +34,10 @@
         <app-submission-file *ngIf="submissionTypeOfTask() == 'file'" (update)="updateSubmissionContent($event)"></app-submission-file>
         <app-submission-text *ngIf="submissionTypeOfTask() == 'text'" (update)="updateSubmissionContent($event)"></app-submission-text>
         <app-submission-spreadsheet *ngIf="submissionTypeOfTask() == 'spreadsheet'" (update)="updateSubmissionContent($event)"
-                                    [inputFields]="task.mediaInformation.inputs"
-                                    [outputFields]="task.mediaInformation.outputs"
-                                    [decimals]="task.mediaInformation.decimals"
+                                    [inputFields]="task?.mediaInformation.inputs || []"
+                                    [outputFields]="task?.mediaInformation.outputs || []"
+                                    [decimals]="task?.mediaInformation.decimals || 2"
+                                    [content]="latestResult?.extInfo || {}"
         ></app-submission-spreadsheet>
       </div>
 
